refactor: multiple changes narrow exceptions and update to transform instead of mapper.map